# codefleet

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: demo.py
docs/: codex-fleet-supervisor-spec.md
examples/: competitive-implement.json  parallel-implement-review.json  write-review-refine.json
src/agent_fleet_supervisor/: __init__.py  git_ops.py  server.py  supervisor.py  worker_runtime.py  workflow.py
src/codefleet/: __init__.py  git_ops.py  models.py  result_schema.py  server.py  store.py  supervisor.py  worker_runtime.py  workflow.py
src/codex_fleet_supervisor/: __init__.py  models.py  result_schema.py  server.py  store.py  supervisor.py  worker_runtime.py
tests/: conftest.py  test_claude_smoke.py  test_codex_smoke.py  test_gemini_smoke.py  test_git_ops.py  test_models.py  test_result_schema.py  test_server.py  test_store.py  test_supervisor.py  test_worker_runtime.py  test_workflow.py
