[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-fleet-supervisor"
version = "0.1.0"
description = "MCP server for orchestrating OpenAI Codex workers via Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
codex-fleet-supervisor = "codex_fleet_supervisor.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/codex_fleet_supervisor"]
