[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-fleet-supervisor"
version = "0.2.0"
description = "MCP server for orchestrating AI coding agent workers (Codex, Gemini, etc.) via Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
agent-fleet-supervisor = "agent_fleet_supervisor.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/agent_fleet_supervisor"]
