[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codefleet"
version = "0.3.8"
description = "Orchestrate fleets of AI coding agents (Codex, Gemini, Claude) with multi-stage workflows"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ai", "agents", "codex", "gemini", "claude", "mcp", "workflow", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
codefleet = "codefleet.server:main"

[project.urls]
Homepage = "https://github.com/techinfobel/codefleet"
Repository = "https://github.com/techinfobel/codefleet"
Issues = "https://github.com/techinfobel/codefleet/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/codefleet"]
